--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg-promise": "^10.9.4",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.5.0",
