--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "postinstall": "npx sequelize db:migrate"
   },
   "dependencies": {
+    "connect-pg-simple": "^6.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
