--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "npx sequelize db:migrate"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-pg-simple": "^6.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -25,7 +26,8 @@
     "pg-promise": "^10.9.4",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
